using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using DG.Tweening;
public class NewCutscenesecond : MonoBehaviour
{
    public GameObject fade, teleportDrone, Screen, Dino, DTR, ship, Garage, Plane, planeRobot, NewsBar, BGMusic, humans, humanone, skip;
    public Animator animaltrans;
    public GameObject[] robots, cams, Conversation, Texts;
    public Transform Cam, robot, fstrobot, Screentrans, dinoTrans, shipTrans, shipcamTrans, PlaneTrans;
    // Start is called before the first frame update
    void Start()
    {
        if(AdmobAdsManager.Instance)
        {
            AdmobAdsManager.Instance.hideSmallBanner();
        }
        BGMusic.SetActive(false);
        fade.SetActive(true);
        cams[0].SetActive(true);
        Garage.SetActive(true);
        StartCoroutine(Cutscene());
    }
    IEnumerator Cutscene()
    {
        yield return new WaitForSeconds(2f);
        Cam.DOLocalMove(new Vector3(-60, 8.5f, 145), 3f);
        Cam.DOLocalRotateQuaternion(Quaternion.Euler(0, 90, 0), 3f);
        yield return new WaitForSeconds(1f);
        robots[1].SetActive(true);
        robots[1].GetComponent<SWS.splineMove>().enabled = true;
        robots[1].GetComponent<Animator>().SetBool("Walk", true);
        robots[1].GetComponent<Animator>().SetBool("Run", true);
        yield return new WaitForSeconds(5.5f);
        robots[1].GetComponent<Animator>().SetBool("Run", false);
        robots[1].GetComponent<Animator>().SetBool("Kneel", true);
        yield return new WaitForSeconds(1f);
        robot.DOLocalRotateQuaternion(Quaternion.Euler(0, 0, 0), 1f);
        yield return new WaitForSeconds(2f);
        //robot.DOLocalMoveY(-27.73f, 1f);
        robots[1].GetComponent<Animator>().enabled = false;
        yield return new WaitForSeconds(1f);
        Conversation[0].SetActive(true);
        Texts[0].SetActive(true);
        yield return new WaitForSeconds(2f);
        Conversation[1].SetActive(true);
        Texts[1].SetActive(true);
        Conversation[0].SetActive(false);
        Texts[0].SetActive(false);
        yield return new WaitForSeconds(4f);
        Conversation[1].SetActive(false);
        Texts[1].SetActive(false);
        Conversation[0].SetActive(true);
        Texts[2].SetActive(true);
        skip.SetActive(true);
        yield return new WaitForSeconds(2f);
        robots[0].GetComponent<Animator>().enabled = true;
        robots[0].GetComponent<Animator>().SetBool("Turn", true);
        fstrobot.DOLocalRotateQuaternion(Quaternion.Euler(0, 180, 0), 2f);
        Conversation[1].SetActive(true);
        Texts[3].SetActive(true);
        Conversation[0].SetActive(false);
        Texts[2].SetActive(false);
        yield return new WaitForSeconds(2f);
        Conversation[1].SetActive(false);
        Texts[3].SetActive(false);
        Conversation[0].SetActive(true);
        Texts[4].SetActive(true);
        yield return new WaitForSeconds(6f);
        Conversation[2].SetActive(true);
        Conversation[0].SetActive(false);
        Texts[4].SetActive(false);
        Texts[5].SetActive(true);
        yield return new WaitForSeconds(2f);
        robots[0].GetComponent<Animator>().SetBool("Idle", true);
        Texts[5].SetActive(false);
        Texts[10].SetActive(true);
        yield return new WaitForSeconds(3f);
        Texts[10].SetActive(false);
        Conversation[2].SetActive(false);
        Cam.DOLocalMove(new Vector3(-53, 8.5f, 190), 2f);
        Cam.DOLocalRotateQuaternion(Quaternion.Euler(0, 135, 0), 2f);
        yield return new WaitForSeconds(2f);
        Screen.SetActive(true);
        Screentrans.DOScale(1, 2f);
        robots[0].GetComponent<Animator>().SetBool("Button", true);
        yield return new WaitForSeconds(2f);
        Screentrans.DOScale(0, 2f);
        yield return new WaitForSeconds(2f);
        Screen.SetActive(false);
        robots[2].SetActive(true);
        Cam.DOLocalMove(new Vector3(-60, 8.5f, 145), 3f);
        Cam.DOLocalRotateQuaternion(Quaternion.Euler(0, 90, 0), 3f);
        yield return new WaitForSeconds(2f);
        Cam.DOLocalMove(new Vector3(-55, 4.5f, 110), 3f);
        Cam.DOLocalRotateQuaternion(Quaternion.Euler(0, 65, 0), 3f);
        yield return new WaitForSeconds(5f);
        teleportDrone.SetActive(true);
        Dino.SetActive(true);
        yield return new WaitForSeconds(2f);
        Cam.DOLocalMove(new Vector3(4.5f, 14.5f, 133), 3f);
        Cam.DOLocalRotateQuaternion(Quaternion.Euler(0, 0, 0), 3f);
        yield return new WaitForSeconds(3f);
        dinoTrans.DOScale(10, 3f);
        yield return new WaitForSeconds(3f);
        Conversation[2].SetActive(true);
        Texts[6].SetActive(true);
        yield return new WaitForSeconds(4f);
        Conversation[2].SetActive(false);
        Texts[6].SetActive(false);
        Cam.DOLocalMove(new Vector3(25f, 9.5f, 90), 3f);
        Cam.DOLocalRotateQuaternion(Quaternion.Euler(0, -45, 0), 3f);
        yield return new WaitForSeconds(3f);
        Conversation[0].SetActive(true);
        Texts[7].SetActive(true);
        Conversation[0].transform.localRotation= Quaternion.identity;
        Texts[7].transform.localRotation = Quaternion.identity;
        yield return new WaitForSeconds(5f);
        Conversation[0].SetActive(false);
        Texts[7].SetActive(false);
        Cam.DOLocalMove(new Vector3(4.5f, 14.5f, 133), 3f);
        Cam.DOLocalRotateQuaternion(Quaternion.Euler(0, 0, 0), 3f); 
        yield return new WaitForSeconds(3f);
        Dino.SetActive(false);
        DTR.SetActive(true);
        animaltrans.Play("rt1");
        yield return new WaitForSeconds(3f);
        Cam.DOLocalMove(new Vector3(-2f, 9.5f, 90), 3f);
        yield return new WaitForSeconds(3f);
        Conversation[2].SetActive(true);
        Texts[8].SetActive(true);
        yield return new WaitForSeconds(4f);
        Texts[8].SetActive(false);
        Texts[9].SetActive(true);
        yield return new WaitForSeconds(3f);
        fade.SetActive(true);
        cams[0].SetActive(false);
        Garage.SetActive(false);
        ship.SetActive(true);
        shipTrans.DOLocalMove(new Vector3(23, -1530, 94), 7f);
        yield return new WaitForSeconds(7f);
        shipcamTrans.DOLocalMove(new Vector3(0, -9, 75), 4f);
        shipcamTrans.DOLocalRotateQuaternion(Quaternion.Euler(17.5f, 180, 0), 4f);
        yield return new WaitForSeconds(4f);
        Plane.SetActive(true);
        PlaneTrans.DOScaleX(3f, 2f);
        PlaneTrans.DOScaleY(1f, 2f);
        PlaneTrans.DOScaleZ(2f, 2f);
        yield return new WaitForSeconds(2f);
        planeRobot.GetComponent<Animator>().SetBool("Walk", true);
        planeRobot.GetComponent<Animator>().SetBool("Talk", true);
        NewsBar.SetActive(true);
        yield return new WaitForSeconds(7f);
        cams[1].GetComponent<Camera>().farClipPlane = 500;
        shipcamTrans.DOLocalMove(new Vector3(-14, -120, 80), 0f);
        shipcamTrans.DOLocalRotateQuaternion(Quaternion.Euler(3.5f, -4, 0), 0f);
        humans.SetActive(true);
        yield return new WaitForSeconds(3f);
        //humanone.GetComponent<Animator>().SetBool("Point", true);
        levelmanager.instance.StartGamePlay();

    }
}
